--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+.justify-content {
+    display: flex; 
+    flex-direction: row; 
+    justify-content: center;
+}
+
+.align-items {
+    display: flex; 
+    flex-direction: column; 
+    align-items: center;
+}
+
+.padded {
+    padding: 16px;
+}
